<resources>
    <string name="app_name">MovieSearch</string>
    <string name="search">Search</string>
    <string name="query">query</string>
    <string name="title">MOVIE SEARCH</string>
    <string name="budget">\\$%1$d</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="rating">Rating:</string>
    <string name="description">Description:</string>
    <string name="date">Release date:</string>
    <string name="movieTitle">Title:</string>
    <string name="empty">No movies found!</string>
</resources>
