<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.MainActivity">

    <TextView
            android:id="@+id/tvTitle"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/title"
            android:textSize="@dimen/title_size"
            android:paddingTop="150dp"
    />


    <EditText
            android:id="@+id/etQuery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:hint="@string/query"
            android:inputType="text"/>

    <Button
        android:id="@+id/btnSearch"
        android:text="@string/search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/etQuery"/>

</RelativeLayout>